# rubriq

./: .dockerignore  .gitignore  CLAUDE.md  DEPLOY.md  DESIGN.md  Dockerfile  PRODUCT.md  README.md  RESEARCH.md  pyproject.toml
.impeccable/critique/: 2026-07-05T08-54-25Z__web-index-html.md
rubriq/: __init__.py  classify.py  constraints.py  gemini.py  models.py  schemas.py  textutils.py
rubriq/api/: main.py
rubriq/metrics/: code_static.py  faithfulness.py  hallucination_risk.py  lexical.py  readability.py  relevance.py  structure.py
rubriq/prompts/: generator.py  model_profiles.py
rubriq/scoring/: __init__.py  base.py  judge.py  local.py  parameters.py  taxonomy.py
tests/: samples.py  test_classifier.py  test_constraints.py  test_prompts.py  test_scoring.py
web/: app.js  config.js  index.html  models.js  package-lock.json  package.json  samples.js  styles.css  tailwind.config.js  vercel.json  vite.config.ts
web/fonts/.impeccable/: hook.cache.json
web/src/: App.tsx  index.css
web/src/components/: Combobox.tsx  Dropdown.tsx  EvaluateButton.tsx  GlassField.tsx  Header.tsx  HonestyNote.tsx  IntakeView.tsx  JudgePanel.tsx  MotionToggle.tsx  ParameterCard.tsx  RepairPrompt.tsx  SampleChips.tsx  SceneBackground.tsx  ScoreGauge.tsx  Specimen.tsx  StatusPill.tsx  TaskBadge.tsx  ToneSelector.tsx  VerdictView.tsx
web/src/data/: demo.json
web/src/lib/: api.ts  motion.ts  motionPref.tsx  pointer.tsx  providers.ts  samples.ts  text.ts  tiers.ts  types.ts
