[project]
name = "rubriq"
version = "0.1.0"
description = "Score any LLM's output locally - no API calls - and get research-grounded prompts that fix what failed."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.6",
    "numpy>=1.26",
    "sentence-transformers>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["rubriq*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
